fix gap space

--- a/aeon-flexx.css
+++ b/aeon-flexx.css
@@ -954,7 +954,7 @@ h3 { font-size: var(--tertiary-heading) }
   display: flex;
   align-items: end;
   flex-wrap: wrap;
-  gap: var(--secondary-space);
+  gap: var(--tertiary-space);
   border-bottom: 2px solid rgba(var(--primary-color), 1);
   padding: var(--tertiary-space);
 }
